--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "author": "Ermir Suldashi",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mainloop.js": "^1.0.4"
   },
   "devDependencies": {
     "browserify": "^16.5.0",
